Update CMakeLists, include new libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,7 @@
 # Necessary environment variables: QT_PATH, INCLUDE
 cmake_minimum_required(VERSION 2.8.12.1)
 include (add_macros.cmake)
+include (copy_lib.cmake)
 
 set(USER_NAME "Azzu")
 
@@ -9,6 +10,7 @@ set(PROJECT_NAME "Pong_Clone")
 set(QT_PROJECT FALSE)
 set(SDL2_PROJECT TRUE)
 set(SDL2_TTF_PROJECT TRUE)
+set(SDL2_IMAGE_PROJECT TRUE)
 set(BOOST_PROJECT FALSE)
 set(BOOST_COMPONENTS system chrono date_time thread)
 
@@ -43,7 +45,11 @@ if (${SDL2_PROJECT})
 		return() 
 	endif (NOT SDL2_FOUND)
 
+	list(APPEND STATIC_LIBRARIES ${SDL2_LIBRARIES})
+
 	include_directories(${SDL2_INCLUDE_DIRS})
+
+	list(APPEND DYNAMIC_LIBRARIES SDL2.dll)
 endif()
 
 
@@ -56,26 +62,50 @@ if (${SDL2_TTF_PROJECT})
 		return()
 	endif (NOT SDL2_TTF_FOUND)
 
+    list (APPEND STATIC_LIBRARIES ${SDL2_TTF_LIBRARIES})
+
 	include_directories(${SDL2_TTF_INCLUDE_DIRS})
+
+	list(APPEND DYNAMIC_LIBRARIES libfreetype-6.dll SDL2_ttf.dll zlib1.dll)
+endif()
+
+###### Find SDL2_IMAGE lib ######
+if (${SDL2_IMAGE_PROJECT})
+	find_package(SDL2_image REQUIRED)
+
+	if (NOT SDL2_IMAGE_FOUND)
+		message(SEND_ERROR "SDL2_IMAGE not found! Adjust or provide a FindSDL2_image.cmake!")
+		return()
+	endif (NOT SDL2_IMAGE_FOUND)
+
+	list (APPEND STATIC_LIBRARIES ${SDL2_IMAGE_LIBRARIES})
+
+	include_directories(${SDL2_IMAGE_INCLUDE_DIRS})
+
+	list(APPEND DYNAMIC_LIBRARIES SDL2_image.dll libjpeg-9.dll libpng16-16.dll libtiff-5.dll libwebp-4.dll zlib1.dll)
 endif()
 
 ###### Find Qt ######
-if (${QT_PROJECT}) 
+if (${QT_PROJECT})
 	find_package(Qt5Widgets REQUIRED)
+
+	qt5_wrap_ui(UI_HEADERS ${UI_FILES})
+	list (APPEND SOURCE_FILES ${UI_HEADERS})
+	list (APPEND SOURCE_FILES ${MOC_SRC})
+	message(STATUS "UI Headers:  ${UI_HEADERS}")
 endif()
 
 ###### Find Boost ######
 if (${BOOST_PROJECT})
-    SET(BOOST_ROOT "P:/tools/compilers/MinGW/")
-    find_package(Boost REQUIRED COMPONENTS ${BOOST_COMPONENTS})
-    if (NOT Boost_FOUND)
-        message(SEND_ERROR "Boost not found")
-    endif()
-    if (Boost_FOUND)
-        include_directories(${Boost_INCLUDE_DIR})
-        add_definitions("-DHAS_BOOST")
-        list (APPEND STATIC_LIBRARIES ${Boost_LIBRARIES})
-    endif()
+	SET(BOOST_ROOT "P:/tools/compilers/MinGW/")
+	find_package(Boost REQUIRED COMPONENTS ${BOOST_COMPONENTS})
+	if (NOT Boost_FOUND)
+		message(SEND_ERROR "Boost not found")
+	endif()
+
+	include_directories(${Boost_INCLUDE_DIR})
+	add_definitions("-DHAS_BOOST")
+	list (APPEND STATIC_LIBRARIES ${Boost_LIBRARIES})
 endif()
 
 ###### Main executable ######
@@ -83,16 +113,6 @@ add_subdirectory("lib")
 add_subdirectory("src")
 
 include_directories("src")
-
-if (${SDL2_PROJECT})
-	list (APPEND STATIC_LIBRARIES ${SDL2_LIBRARIES})
-endif()
-
-if (${QT_PROJECT})
-	qt5_wrap_ui(UI_HEADERS ${UI_FILES})
-	list (APPEND SOURCE_FILES ${UI_HEADERS})
-	list (APPEND SOURCE_FILES ${MOC_SRC})
-endif()
 
 add_executable(${PROJECT_NAME} ${SOURCE_FILES})
 target_link_libraries(${PROJECT_NAME} ${STATIC_LIBRARIES})
@@ -106,17 +126,6 @@ get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTO
 message(STATUS "src_include_dirs: ${dirs}")
 message(STATUS "linked libraries:  ${STATIC_LIBRARIES}")
 
-if (${QT_PROJECT})
-	message(STATUS "UI Headers:  ${UI_HEADERS}")
-endif()
-
-###### Add SDL2.dll to main output ######
-if (${SDL2_PROJECT})
-	add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
-		COMMAND ${CMAKE_COMMAND} -E copy_if_different
-		"${PROJECT_SOURCE_DIR}/lib/SDL2.dll"
-		$<TARGET_FILE_DIR:${PROJECT_NAME}>)
-endif()
 
 
 ###### UnitTest executable ######
@@ -130,10 +139,5 @@ if (${SDL2_PROJECT})
 	target_link_libraries(${PROJECT_NAME}_tests ${SDL2_LIBRARIES})
 endif()
 
-###### Add SDL2.dll to test output ######
-if (${SDL2_PROJECT})
-	add_custom_command(TARGET ${PROJECT_NAME}_tests POST_BUILD
-		COMMAND ${CMAKE_COMMAND} -E copy_if_different
-		"${PROJECT_SOURCE_DIR}/lib/SDL2.dll"
-		$<TARGET_FILE_DIR:${PROJECT_NAME}_tests>)
-endif()
+###### Copy libraries to normal and test target ######
+copy_lib(${DYNAMIC_LIBRARIES})
