Progress basic rendering

--- a/src/graphics/CMakeLists.txt
+++ b/src/graphics/CMakeLists.txt
@@ -1,3 +1,7 @@
 cmake_minimum_required(VERSION 2.8.12.1)
 
 add_sources(GameWindow.cpp)
+add_sources(Renderer.cpp)
+add_sources(Renderable.cpp)
+add_sources(Surface.cpp)
+add_sources(Texture.cpp)
