Add a bunch of wrappers around SDL2

--- a/src/graphics/CMakeLists.txt
+++ b/src/graphics/CMakeLists.txt
@@ -1,7 +1,11 @@
 cmake_minimum_required(VERSION 2.8.12.1)
 
+add_sources(Color.cpp)
 add_sources(GameWindow.cpp)
+add_sources(Rectangle.cpp)
 add_sources(Renderer.cpp)
 add_sources(Renderable.cpp)
 add_sources(Surface.cpp)
+add_sources(Text.cpp)
 add_sources(Texture.cpp)
+add_sources(Window.cpp)
