--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,6 +2,6 @@ cmake_minimum_required(VERSION 2.8.12.1)
 
 add_subdirectory(gamestate)
 add_subdirectory(graphics)
+add_subdirectory(util)
 
 add_sources(Game.cpp)
-add_sources(Main.cpp)
