--- a/src/gamestate/CMakeLists.txt
+++ b/src/gamestate/CMakeLists.txt
@@ -1,4 +1,7 @@
 cmake_minimum_required(VERSION 2.8.12.1)
 
-add_sources(MainMenu.cpp)
-add_sources(GameState.cpp)
+add_sources(
+	MainMenu.cpp
+	GameState.cpp
+	StateStack.cpp
+)
