--- a/test/graphics/CMakeLists.txt
+++ b/test/graphics/CMakeLists.txt
@@ -1,3 +1,14 @@
 cmake_minimum_required(VERSION 2.8.12.1)
 
-add_tests(GameWindowTest.cpp)
+add_tests(
+	ColorTest.cpp
+	DimensionTest.cpp
+	GameWindowTest.cpp
+	PointTest.cpp
+	RectTest.cpp
+	RendererTest.cpp
+	RenderRectTest.cpp
+	SurfaceTest.cpp
+	TextureTest.cpp
+	WindowTest.cpp
+)
