Remove user_defined_settings.cmake from repository
--assume-unchanged will, when you checkout a branch, overwrite the settings. --skip-worktree will not allow you to check something out. The solution is to not have the file in version control and every person that checks the repository out has to create the file themselves, even if no custom config is needed.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
+### CMake user config ###
+# Due to --assume-unchanged overwriting the file and --skip-worktree not allowing you to change branches,
+# this file is now no longer in version control. You have to create it yourself, it can be empty.
+CMake/user_defined_settings.cmake
+
 ### CLion ###
 exportToHtml/
 .idea/
