--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 cmake_minimum_required(VERSION 2.8.12.1)
 
 add_subdirectory(gamestate)
-add_subdirectory(graphics)
+add_subdirectory(resources)
+add_subdirectory(video)
 
 add_sources(Game.cpp)
