--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.12.1)
 
 add_subdirectory(gamestate)
-add_subdirectory(graphics)
+add_subdirectory(resources)
 
 add_tests(GameTest.cpp)
