--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,5 +2,6 @@ cmake_minimum_required(VERSION 2.8.12.1)
 
 add_subdirectory(gamestate)
 add_subdirectory(resources)
+add_subdirectory(video)
 
 add_tests(GameTest.cpp)
